--- a/packages/apex-create-sobject-faux-classes/package.json
+++ b/packages/apex-create-sobject-faux-classes/package.json
@@ -7,23 +7,23 @@
   "license": "ISC",
   "main": "out/index.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "src": "src"
   },
   "files": [
-    "lib"
+    "src"
   ],
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1",
     "compile": "tsc -b tsconfig.json"
   },
   "dependencies": {
+    "@johnmutuma5/salesforce-sobjects-faux-generator": "49.7.0",
+    "@johnmutuma5/salesforcedx-utils-vscode": "49.7.0",
     "@types/chai": "^4.2.12",
     "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.3",
     "chai": "^4.2.0",
     "coc.nvim": "0.0.77",
-    "mocha": "^8.1.3",
-    "@johnmutuma5/salesforce-sobjects-faux-generator": "49.7.0",
-    "@johnmutuma5/salesforcedx-utils-vscode": "49.7.0"
+    "mocha": "^8.1.3"
   }
 }
