--- a/packages/salesforcedx-utils-vscode/package.json
+++ b/packages/salesforcedx-utils-vscode/package.json
@@ -10,6 +10,7 @@
     "Other"
   ],
   "dependencies": {
+    "@types/node": "^14.6.3",
     "cross-spawn": "6.0.5",
     "path-exists": "3.0.0",
     "rxjs": "^5.4.1",
@@ -38,7 +39,7 @@
     "vscode": "^1.40.0"
   },
   "scripts": {
-    "compile": "webpack",
+    "compile": "tsc -b tsconfig.json",
     "lint": "tslint --project .",
     "watch": "tsc -watch -p .",
     "clean": "shx rm -rf node_modules && shx rm -rf out && shx rm -rf coverage && shx rm -rf .nyc_output",
