--- a/packages/salesforcedx-utils-vscode/tsconfig.json
+++ b/packages/salesforcedx-utils-vscode/tsconfig.json
@@ -1,16 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "lib": ["es6", "dom"],
-    "sourceMap": true,
-    "declaration": true,
-    "moduleResolution": "node",
-    "noImplicitAny": true,
-    "outDir": "out",
-    "preserveConstEnums": true,
-    "strict": true
+    "outDir": "./out",
+    "rootDir": "./src"
   },
   "exclude": ["node_modules", "out"]
 }
