--- a/package.json
+++ b/package.json
@@ -3,18 +3,57 @@
   "displayName": "SFDX Utilities for VS Code",
   "description": "Create faux classes",
   "version": "0.0.1",
+  "main": "out/src/index.js",
   "publisher": "johnmutuma5",
   "license": "BSD-3-Clause",
   "categories": [
     "Other"
   ],
+  "engines": {
+    "coc": ">= 0.0.70"
+  },
   "dependencies": {
+    "@salesforce/core": "2.5.1",
+    "@types/cross-spawn": "^6.0.2",
     "@types/events": "^3.0.0",
+    "@types/node": "^14.6.3",
+    "coc.nvim": "0.0.77",
+    "cross-spawn": "6.0.5",
+    "path-exists": "3.0.0",
+    "rxjs": "^5.4.1",
+    "shelljs": "0.8.3",
+    "tree-kill": "^1.1.0",
     "ts-loader": "^8.0.3"
   },
   "devDependencies": {
-    "typescript": "^4.0.2",
+    "@types/path-exists": "^1.0.29",
+    "@types/rimraf": "^2.0.2",
+    "@types/shelljs": "0.7.4",
+    "@types/sinon": "^2.3.2",
+    "cross-env": "5.2.0",
+    "mocha": "^5",
+    "mocha-junit-reporter": "^1.23.3",
+    "mocha-multi-reporters": "^1.1.7",
+    "mock-spawn": "0.2.6",
+    "nyc": "^13",
+    "sinon": "^7.3.1",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.3",
+    "chai": "^4.2.0",
+    "coc.nvim": "0.0.77",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "request-light": "0.2.4",
+    "typescript": "3.7.5"
+  },
+  "scripts": {
+    "compile": "tsc -b tsconfig.json",
+    "lint": "tslint --project .",
+    "watch": "tsc -watch -p .",
+    "clean": "shx rm -rf node_modules && shx rm -rf out",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/_mocha --recursive --recursive out/test/unit --reporter mocha-multi-reporters --reporter-options configFile=../../config/mochaUnitTestsConfig.json",
+    "test:integration": "node ./node_modules/cross-env/dist/bin/cross-env.js VSCODE_NLS_CONFIG={} ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/_mocha --recursive out/test/integration --reporter mocha-multi-reporters --reporter-options configFile=../../config/mochaIntegrationTestsConfig.json"
   }
 }
