--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "esModuleInterop": false,
     "module": "commonjs",
     "target": "es6",
-    "lib": [  "es6", "dom" ]
+    "lib": [  "es6", "dom" ],
+    "baseUrl": "./packages"
   },
   "exclude": [
     "node_modules",
