spin up language server and language client

--- a/package.json
+++ b/package.json
@@ -14,22 +14,30 @@
   },
   "dependencies": {
     "@salesforce/core": "2.5.1",
-    "@types/cross-spawn": "^6.0.2",
-    "@types/events": "^3.0.0",
-    "@types/node": "^14.6.3",
     "coc.nvim": "0.0.77",
     "cross-spawn": "6.0.5",
     "path-exists": "3.0.0",
     "rxjs": "^5.4.1",
     "shelljs": "0.8.3",
     "tree-kill": "^1.1.0",
-    "ts-loader": "^8.0.3"
+    "ts-loader": "^8.0.3",
+    "@salesforce/apex-tmlanguage": "1.4.0",
+    "expand-home-dir": "0.0.3",
+    "find-java-home": "0.2.0",
+    "vscode-extension-telemetry": "0.0.17",
+    "vscode-languageclient": "5.1.1"
   },
   "devDependencies": {
+    "@types/cross-spawn": "^6.0.2",
+    "@types/events": "^3.0.0",
+    "@types/vscode": "1.40.0",
     "@types/path-exists": "^1.0.29",
     "@types/rimraf": "^2.0.2",
     "@types/shelljs": "0.7.4",
     "@types/sinon": "^2.3.2",
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
+    "@types/node": "^14.6.3",
     "cross-env": "5.2.0",
     "mocha": "^5",
     "mocha-junit-reporter": "^1.23.3",
@@ -37,11 +45,7 @@
     "mock-spawn": "0.2.6",
     "nyc": "^13",
     "sinon": "^7.3.1",
-    "@types/chai": "^4.2.12",
-    "@types/mocha": "^8.0.3",
-    "@types/node": "^14.6.3",
     "chai": "^4.2.0",
-    "coc.nvim": "0.0.77",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "request-light": "0.2.4",
