--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-spawn": "6.0.5",
     "expand-home-dir": "0.0.3",
     "find-java-home": "0.2.0",
+    "glob": "^7.1.6",
     "path-exists": "3.0.0",
     "rxjs": "^5.4.1",
     "shelljs": "0.8.3",
